--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
