--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "task-react",
   "version": "0.1.0",
   "private": true,
+  "devDependencies":{
+    "react-scripts": "5.0.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -12,7 +15,6 @@
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.0"
   },
