--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task-react",
   "version": "0.1.0",
   "private": true,
-  "devDependencies":{
+  "devDependencies": {
     "react-scripts": "5.0.1"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "6.0.2",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.0"
   },
