--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
+    "husky": "^8.0.1",
     "prettier-config-standard": "^5.0.0",
     "react-scripts": "5.0.1"
   },
@@ -18,6 +19,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "lint-staged": "^13.0.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -32,7 +34,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint":  "eslint --fix --ext .jsx ."
+    "lint": "eslint --fix --ext .jsx .",
+    "husky:prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
