--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
+    "git-commit-msg-linter": "^4.2.1",
     "husky": "^8.0.1",
     "prettier-config-standard": "^5.0.0",
     "react-scripts": "5.0.1"
