--- a/package.json
+++ b/package.json
@@ -28,11 +28,10 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "6.0.2",
     "sass": "^1.55.0",
-    "serve": "^14.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
