--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "6.0.2",
     "sass": "^1.55.0",
+    "serve": "^14.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .jsx .",
-    "husky:prepare": "husky install"
+    "husky:prepare": "husky install",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
